# security_scanner

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGES_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ENHANCED_FEATURES.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOW_CODE_SCANNER_README.md  MERN.html  QUICK_START.md  QUICK_START_WEB_FRONTEND.md  README.md  STANDARDS_REPORT_GENERATOR_SUMMARY.md  THESIS_CLEANUP_SUMMARY.md  THESIS_DOCUMENTATION.md  UPGRADE_SUMMARY.md  VERIFICATION_INTEGRATION_SUMMARY.md  VERIFICATION_SYSTEM_FIXED.md  VULNERABILITY_DETECTION_MAP.md  VULNERABILITY_ENHANCEMENTS.md  WEB_FRONTEND_GUIDE.md  compare_vulnerabilities.py  comprehensive_low_code_scanner.py  debug_type_matching.py  debug_verification.py  demo_verification.py  detailed_comparison.py  docker-compose.yml  extract_burp_vulns.py  extract_detailed_burp.py  multi_platform_comparison.py  pyproject.toml  pytest.ini  requirements-web.txt  requirements.txt  (+12 more)
.github/workflows/: ci.yml
Bursuite Reports/: Aritable.html  Bubble.html  Outsystems.html
config/: config.yaml  settings.py
data/scans/: scan_20260131_180245_0.json  scan_20260131_180635_0.json  scan_20260131_181021_0.json  scan_20260131_181527_0.json  scan_20260131_182926_0.json  scan_20260131_190533_0.json  scan_20260131_190602_0.json  scan_20260131_192145_0.json  scan_20260131_192217_0.json  (+18 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md
scripts/: evaluation_harness.py  example_usage.py
tests/: test_analyzers.py  test_cli.py  test_result_standardizer.py  test_scanner.py  test_vulnerability_detection.py
(+78 files in other folders)
